# py_parquet_forge

./: DOCUMENTATION.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  vcpkg.json
.github/workflows/: ci-cd.yml
docs/: index.md
src/py_parquet_forge/: __init__.py  exceptions.py  main.py
tests/: test_api.py  test_atomic_writes.py  test_converter.py  test_coverage.py  test_data_types.py  test_edge_cases.py  test_exceptions.py  test_inspect_schema.py  test_io.py  test_iter.py  test_main.py  test_new_edge_cases.py  test_read_parquet.py  test_req_3_3_1_write_parquet.py  test_simple_atomic_write.py  test_stream.py  test_stream_writer.py  test_write_parquet.py  test_write_to_dataset.py
