[tool.poetry]
name = "py_parquet_forge"
version = "0.1.0"
description = "A Python utility for standardizing high-performance serialization of in-memory data objects into local Apache Parquet files. Built on PyArrow, it provides memory-efficient streaming, atomic writes, and schema-enforced dataset management."
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "py_parquet_forge", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
loguru = "^0.7.2"
pyarrow = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "py_parquet_forge"
version = "0.1.0"
description = "A Python utility for standardizing high-performance serialization of in-memory data objects into local Apache Parquet files. Built on PyArrow, it provides memory-efficient streaming, atomic writes, and schema-enforced dataset management."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/py_parquet_forge"
Repository = "https://github.com/CoReason-AI/py_parquet_forge"
Documentation = "https://github.com/CoReason-AI/py_parquet_forge"
